k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diffusion-demo-service
spec:
  type: ClusterIP
  selector:
    app: diffusion-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7860
