k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diffusion-demo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: "${K8S_CLUSTER_NAME}.cis240773.projects.jetstream-cloud.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diffusion-demo-service
            port:
              number: 80
  tls:
  - hosts:
    - "${K8S_CLUSTER_NAME}.cis240773.projects.jetstream-cloud.org"
    secretName: diffusion-demo-tls
